# mock-final

./: README.md  sp21-final-mock.cabal  stack.yaml
sol/: Fib.lc  FileSystem.hs  Logging.hs
src/: Fib.lc  FileSystem.hs  Logging.hs
tests/: Test.hs
