name:                sp21-final-mock
version:             0.1.0.0
synopsis:            Starter code for CSE130 Fall 2021 Final Mock
license:             MIT
license-file:        LICENSE
author:              Nadia Polikarpova
maintainer:          nadia.polikarpova@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


Library
  ghc-options:         -W -threaded
  exposed-modules:     FileSystem, Logging

  -- other-extensions:
  build-depends:       base,
                       array,
                       mtl,
                       directory,
                       QuickCheck
  build-tools:         alex, happy
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  main-is:          Test.hs
  build-depends:    base,
                    mtl,
                    directory,
                    filepath,
                    QuickCheck,
                    tasty,
                    tasty-hunit,
                    tasty-quickcheck,
                    process,
                    elsa >= 0.2.1.1,
                    sp21-final-mock
  other-modules:    Common
